--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Buap_Home</name>
+	<name>Buap_1234</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -17,8 +17,8 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>com.appcelerator.titanium.alloy.core.nature</nature>
 		<nature>com.appcelerator.titanium.mobile.nature</nature>
 		<nature>com.aptana.projects.webnature</nature>
+		<nature>com.appcelerator.titanium.alloy.core.nature</nature>
 	</natures>
 </projectDescription>
